    - [integration]:
      - [future tense verb] [integration enhancement]
      - [integration bug fixes]:
        - [future tense verb] [integration bug fix]
  - Reporting enhancements:
    - [report type]:
      - [future tense verb] [reporting enhancement]
  - REST/JSON API enhancements:
    - [API entity]:
      - [future tense verb] [API enhancement]
  - Security Fixes:
    - High: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Medium: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]
    - Low: (Authenticated|Unauthenticated) (admin|author|contributor) [vulnerability description]

v4.4.0 (June 2022)
  - Login View: Design update
  - Tylium:
    - Improve mobile experience
    - Show the resource title in the header when viewing a resource
  - Upgraded gems:
    - nokogiri, rack, sinatra
  - Bugs fixes:
    - Cards: Prevent adding 'card' class to card comments
  - Integration enhancements:
    - Nikto: Make references available as an issue field

v4.3.0 (April 2022)
  - Setup Wizard: Add option to pre-populate sample data
  - Uploads: Allow subsequent file uploads from the same scanner without needing to re-select the scanner
  - Upgraded gems: nokogiri, puma, rails
  - Bugs fixes:
    - Editor:
      - Add keyboard shortcut support for windows and linux
      - Allow text selection expansion using shift-click
    - Subscriptions: Show correct Subscribe/Unsubscribe link after a new comment is posted
    - Tables: Prevent columns state from resetting after 2 hours
  - Integration enhancements:
    - Openvas: Update Node label parsing. Include :hostname and :asset_id properties

v4.2.1 (February 2022)
  - Bug fixes: Fix issue default fields appearing in the evidence table

v4.2.0 (February 2022)
  - Editor: Support fields with the same name in the Fields View
  - Increased table loading performance on Issues, Evidence, and Notes for